# westpa

./: .flake8  .gitattributes  .gitignore  .hgignore  .hglog  .hglog-westpa  .hgsub  .hgsubstate  .pre-commit-config.yaml  .readthedocs.yml  .westpa.sh  .westpa_gen.py  AUTHORS  CHANGELOG  CITATION.bib  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  ex_fpp.py  ex_graphtest.py  genindex.html  governance.html  index.html  miniconda_install_westpa.sh  objects.inv  overview.html  params.json  ploterr.py  plothist.py  publications.html  py-modindex.html  pyproject.toml  readme_sphinx.html  run_tests.py  schedule.html  search.html  searchindex.js  (+37 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_template.md  config.yml  feature_request_template.md
.github/workflows/: build.yaml  codeql.yml  mirror.yaml  test.yaml
_sources/development/: source_code.txt
avg/: __init__.py
development/: api.html  coding.html  documentation.html  overview.html  source_code.html  style_guide.html
devtools/conda-envs/: test_env.yaml
doc/: Makefile  README.md  conf.py  config_entries.rst  doc_env.yaml  index.rst  readme_sphinx.rst  sphinx_index.rst
doc/_static/: custom.css
doc/code/: west.rst  westtools.rst
doc/development/: api.rst  documentation.rst
doc/documentation/: cli.rst  core.rst  ext.rst  hdf5.rst  modules.rst  others.rst  work_managers.rst
doc/examples/: runseg.sh  runwe.sh
doc/tutorials/: amber.rst  chignolin.rst  gromacs.rst
doc/users_guide/: checklist.rst  command_line_tools.rst  faq.rst  wwmgr.rst
examples/: ex_fluxanl_plot.py  ex_graphtest.py
fasthist/: __init__.py  __main__.py  _fasthist.c  _fasthist.pyx
functional_tests/: t_treewalker.py
lib/cmds/: w_avgbinprobs_cmd.py  w_binprobs.py  w_binprobs_cmd.py  w_dumpsegs.py  w_dumpsegs_cmd.py  w_edpdist.py  w_fluxanl.py  w_fluxanl_cmd.py  w_fork.py  w_init.py  w_init_cmd.py  w_ntop.py  w_ntop_cmd.py  w_pcpdist.py  w_pcpdist_cmd.py  w_run.py  w_run_cmd.py  w_sanity.py  w_sanity_cmd.py  w_segstats.py  w_sqlite2hdf5_cmd.py  w_states.py  w_steady_state.py  w_steady_state_cmd.py  w_succ.py  w_trace.py  w_trace_cmd.py  w_truncate.py  w_truncate_cmd.py  w_ttimes.py  w_ttimes_bf.py  w_ttimes_cmd.py  wbf_import.py  wbf_ttimes.py  wemd_cmd.py
lib/west_tools/: ploterr.py  plothist.py  setup.py  w_assign.py  w_bins.py  w_count_matrix.py  w_crawl.py  w_direct.py  w_dumpsegs.py  w_eddist.py  w_fluxanl.py  w_fptd.py  w_info.py  w_ipa.py  w_ipython.py  (+12 more)
mclib/: __init__.py  _mclib.c  _mclib.pyx
postanalysis/: __init__.py  _stats.pyx
sources/: readme_sphinx.txt  sphinx_index.txt
src/: current_taudep.py  genpc.py  mkdist.py  run.cfg  setup.py  transanl.py  ttimes.py  txt2hdf5.py  we.py  wemd.py  wemdanl.py  wemdctl.py  wemdrun.py
static/: alabaster.css  custom.css  meeting_saved_chat_MOLSSI2021_Day1.txt  meeting_saved_chat_MOLSSI2021_Day2.txt
stylesheets/: stylesheet.css
test_work_managers/: __init__.py  test_environment.py  test_futures.py  test_mpi.py  test_processes.py  test_serial.py  test_threads.py  test_zeromq.py  test_zeromq_environ.py  tsupport.py
tests/: conftest.py  test_binning.py  test_data_manager.py  test_executable.py  test_fasthist.py  test_kinetics.py  test_loaders.py  test_sim_manager.py  test_states.py  test_we_driver.py  test_yamlfe.py  testbinning.py  testkinetics.py  testwtools.py  testyamlfe.py
tool_tests/: __init__.py  test_w_fluxanl.py  test_w_trace.py
trajtree/: _trajtree.c  _trajtree.pyx  trajtree.py
tutorials/: amber.html  chignolin.html  gromacs.html  namd.html  openmm.html  p53.html  quickstart.html
users_guide/: checklist.html  command_line_tools.html  faq.html  hdf5.html  west.html  west_tools.html  westext.html  wwmgr.html
westpa/: __init__.py  _rc.py  extloader.py  h5io.py  kintool.py  plugins.py  progress.py  textio.py  yamlcfg.py
westpanalysis/: __init__.py  core.py  westdataset.py
westtools/: __init__.py  binning.py  core.py  data_reader.py  dtypes.py  h5io.py  progress.py  selected_segs.py
work_managers/: __init__.py  core.py  environment.py  mpi.py  processes.py  serial.py  threads.py  zeromq.py
wt2/: __init__.py
(+1202 files in other folders)
