[metadata]
name = westpanalysis
description = Tools for working with WESTPA simulation data 
license = MIT
license_files = LICENSE
url = https://github.com/jpthompson17/westpanalysis
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry
author = Jeff Thompson
author_email = jeff.thompson@eyesopen.com

[options]
packages = westpanalysis
install_requires =
    westpa

